=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 v1.015

=over

=item *

Fixed a bug where using a category_trail_loop in a category element
template produced an ISE. [Sam]

=item *

Added support for Fedora Core 1. [Perrin Harkins]

=item *

Moved Krang user/group creation from krang_install to Krang::Platform.
This can now be overridden on a platform-by-platform basis. [Peter]

=item *

Created Krang::Platform->find_bin().  Use of this sub now needs to be
propegated throughout krang_install along with Krang::Platform and its
derivatives - it searches $PATH for the full path for the executable
you're trying to run. [Peter]



=item *

Moved the final installation message out of bin/krang_install, created
Krang::Platform->post_install_message() that generates the same output.
This can now be overridden & extended on a platform-specific basis. [Peter]

=item *

Split the various checks out of Krang::Platform->verify_dependencies().
This will simplify ports to other platforms, as individual checks can
now be overridden, rather than the entire sub. [Peter]

=item *

Added new default scheduled job to analyze DB tables nightly.  This
greatly improves performance for large databases. [Sam]

=item *

Fixed bug where default scheduled jobs (tmp cleaner and session
expiration) weren't being run for new installations. [Sam]

=item *

Fixed krang_createdb to stop after the first failed system
call. [Scott Lanning]

=item *

Added enhanced cache debugging code and a last-resort check in an
Apache log_handler to make sure the cache is off at the end of the
request. [Sam]

=item *

Moved setup of /etc/init.d link from krang_install into the Redhat
platform modules' finish_installation() methods.  This should allow
the Gentoo and Debian ports to proceed. [Sam]

=item *

Fixed build and installation system to work with a Perl that isn't
called 'perl' and in your path.  So, for example, if you've got a